--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ body {
 
 
 
-.wrapper {
+/* .wrapper {
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -160,7 +160,7 @@ body {
 	color: #29313a;
 	border: 1px solid #2f3640;
 	transition: all 0.8s ease;
-  }
+  } */
   
   ::-webkit-input-placeholder {
 	/* Chrome/Opera/Safari */
@@ -178,7 +178,7 @@ body {
 	/* Firefox 18- */
 	color: #2f3640;
   }
-  
+/*   
   .wrapper .search-box .btn {
 	position: absolute;
 	width: 50px;
@@ -211,7 +211,7 @@ body {
 	right: 100px;
   }
   
-  
+   */
   
 
 
