--- a/style.css
+++ b/style.css
@@ -131,90 +131,45 @@ body {
 
 
 
-
-
-/* .wrapper {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+  .search-box {
+	display: flex;
+	margin-top: 5px;
+	margin-bottom: -10px;
   }
   
-  .wrapper .search-box {
-	width: 450px;
-	height: 100px;
-	position: relative;
-  }
-  
-  .wrapper .search-box .input {
-	position: absolute;
-	top: 25px;
-	right: 50px;
-	box-sizing: border-box;
-	width: 50px;
-	height: 50px;
-	padding: 0 20px;
+  .searchTerm{
+	width: 200px;
+	height: 36px;
+	border: 3px solid #333333;
+	border-right: none;
+	padding: 5px;
+	border-radius: 5px 0 0 5px;
 	outline: none;
-	font-size: 15px;
-	border-radius: 50px;
-	color: #29313a;
-	border: 1px solid #2f3640;
-	transition: all 0.8s ease;
-  } */
+	color: #9DBFAF;
+	
+	margin-right: -18px;
+  }
   
-  ::-webkit-input-placeholder {
-	/* Chrome/Opera/Safari */
-	color: #2f3640;
+  .searchTerm:focus{
+	color: #333333;
+	height: 36px;
   }
-  ::-moz-placeholder {
-	/* Firefox 19+ */
-	color: #2f3640;
-  }
-  :-ms-input-placeholder {
-	/* IE 10+ */
-	color: #2f3640;
-  }
-  :-moz-placeholder {
-	/* Firefox 18- */
-	color: #2f3640;
-  }
-/*   
-  .wrapper .search-box .btn {
-	position: absolute;
-	width: 50px;
-	height: 50px;
-	background: #2f3640;
-	border-radius: 50%;
-	right: 50px;
-	top: 25px;
-	cursor: pointer;
+  
+  .searchButton {
+	width: 40px;
+	height: 36px;
+	border: 1px solid #333333;
+	background: #333333;
 	text-align: center;
-	line-height: 80px;
-	font-size: 20px;
 	color: #fff;
-	transition: all 0.8s ease;
-	position: relative;
-    float: right;
+	border-radius: 0 5px 5px 0;
+	cursor: pointer;
+	font-size: 20px;
+	margin-bottom: 5px;
   }
-  .wrapper .search-box .btn i{
-	position: absolute;
-	top: 15px;
-	left: 16px;
-  }
-  .wrapper .search-box .input.active {
-	width: 350px;
-	right: 100px;
-  }
-  
-  .wrapper .search-box .btn.animate {
-	transform: rotate(-360deg);
-	right: 100px;
-  }
-  
-   */
   
 
-
+ 
 
 
 
@@ -1562,6 +1517,24 @@ body {
 
 
 
+/* ================ message-reply-page ================== */
+
+.msg-reply-form{
+	margin: 50px 40px;
+}
+.msg-reply{}
+.msg-reply textarea{
+	padding: 5px 10px;
+}
+.msg-reply-btn{
+	 height: 40px;
+	 width: 100px;
+	 border: none;
+	 color: #fff;
+	 background-color: #C80000;
+	 margin-top: 20px;
+	 margin-left: 745px;
+}
 
 /* ================ NP-post-content-area ================== */
 .NP-post-content-area{
@@ -1889,24 +1862,30 @@ body {
    font-weight: 600;
    padding: 5px 0px;
 }
-.button-group{
+.admin-button-group{
 	margin-top: 30px;
 }
-.button-group button{
-    margin-bottom: 15px;
-    border: none;
-    height: 30px;
-	width: 200px;
-	font-weight: 600;
-	color: #C80000;
+.admin-button-group ul{
     
 }
-
+.admin-button-group ul button{
+	display: block;
+	margin: 10px 0px;
+	height: 40px;
+	width: 100%;
+	background-color: #C80000;
+	padding: 10px 0px;
+	border: none;
+	color: #fff;
+	
+}
 .admin-area-right{
 	background-color: #fff;
 	padding: 20px 40px;
 }
-.add-post{}
+.add-post{
+	margin-bottom: 50px;
+}
 .admin-section-title h2{
     position: relative;
 	margin-bottom: 30px;
@@ -1934,7 +1913,7 @@ body {
 .add-title input{
 	height: 50px;
 	width: 870px;
-	
+	padding: 10px 15px;
 }
 .add-title input::-moz-placeholder,
 .add-title input::-webkit-placeholder{
@@ -1987,6 +1966,7 @@ body {
 	font-size: 20px;
 	font-weight: 700;
 	transition: .5s;
+	background-color: rgb(192, 193, 196);
 }
 .post-btn button:hover{
 	border: none;
@@ -1999,7 +1979,7 @@ body {
 	transition: .5s;
 }
 .manage-runing-post{
-	margin-top: 50px;
+	margin-top: 20px;
 	margin-bottom: 30px;
 }
 .manage-runing-post table{
@@ -2076,6 +2056,10 @@ body {
 	padding: 5px 10px;
 	cursor: pointer;
 }
+.cover-photo-overlay a{
+	text-decoration: none;
+	color: #212529;
+}
 .cover-photo-overlay i{
 	padding-right: 5px;
 }
@@ -2126,12 +2110,13 @@ body {
 }
 .profile-menu ul{}
 .profile-menu ul li{
-	padding: 10px 40px;
+	padding: 10px 25px;
 	transition: 1s;
 	border-right: 1px solid #999999;
+	cursor: pointer;
 }
 .profile-menu ul li:hover{
-	padding: 10px 40px;
+	padding: 10px 25px;
 	background-color: #cccccc;
 }
 .profile-menu ul li a{
@@ -2139,6 +2124,9 @@ body {
 	color: #000;
 	font-weight: 700;
 
+}
+.profile-menu ul li a i{
+	padding-right: 5px;
 }
 .user-profile-bottom{
 	margin: 20px 40px;
@@ -2159,7 +2147,215 @@ body {
 	padding-right: 5px;
 }
 .user-intro span h5{
-
+	color: #2A343D;
 }
-.user-intro span p{}
-.user-intro span a{}
+.user-intro  p{
+	text-align: center;
+	color: #2A343D;
+	font-size: 14px;
+	padding: 10px 10px;
+}
+.user-intro button{
+	width: 250px;
+	border: none;
+	margin-left: 10px;
+	border: 1px solid #cccccc;
+}
+.user-intro button:hover{
+	background-color: #EBEDF0;
+}
+.user-intro button a{
+    text-decoration: none;
+	color: #2A343D;
+	font-size: 14px;
+}
+.uesr-detail{
+	margin: 40px 0px;
+}
+.user-work , .user-studies , .user-address{
+	display: flex;
+}
+.user-work i,.user-studies i, .user-address i{
+	padding-top: 3px;
+	padding-right: 8px;
+}
+.user-work p, .user-studies p, .user-address p{
+	color: #2A343D;
+	font-size: 14px;
+}
+.uesr-detail button{
+	width: 250px;
+	border: none;
+	margin-left: 10px;
+	border: 1px solid #cccccc;
+	margin-top: 20px;
+	margin-bottom: 40px;
+}
+.uesr-detail button:hover{
+	background-color: #EBEDF0;
+}
+.uesr-detail button a{
+    text-decoration: none;
+	color: #2A343D;
+	font-size: 14px;
+}
+
+
+
+
+
+.Add-post{
+	margin-bottom: 100px;
+}
+.Add-text{
+	margin-top: 20px;
+}
+.Add-text label{
+	font-size: 25px;
+}
+.Add-text textarea{
+	height: 80px;
+	width: 870px;
+	padding: 10px 15px;
+}
+.Add-text textarea::-moz-placeholder,
+.Add-text textarea::-webkit-placeholder{
+	font-size: 30px;
+	color: #7d7d7d;
+	opacity: 1;
+	padding: 0 10px;
+  }
+
+.save-post{
+	margin-bottom: 80px;
+}
+.Own-post{
+	margin-bottom: 80px;
+}
+
+
+
+  .Edit-profile{
+	margin-bottom: 150px;
+  }
+  .edit-profile-photo ,  .edit-cover-photo{
+	 padding-bottom: 10px;
+  }
+  .edit-profile-photo h4 ,  .edit-cover-photo h4{
+	  font-size: 20px;
+	  font-weight: 600;
+	  padding: 10px 0px;
+  }
+  .edit-profile-photo input,  .edit-cover-photo input{}
+  .edit-biography{
+	margin-bottom: 10px;
+  }
+  .edit-biography h4{
+	font-size: 20px;
+	font-weight: 600;
+	padding: 10px 0px;
+  }
+  .edit-biography input{
+	  border: none;
+	  border-bottom: 2px solid #212529;
+	  background-color: #F4F4F4;
+	  width: 400px;
+  }
+  .edit-profile-details{}
+  .edit-profile-details label{
+	  display:block;
+	  font-size: 18px;
+	font-weight: 600;
+	padding: 5px 0px;
+  }
+  .edit-profile-details input{
+	border: none;
+	border-bottom: 2px solid #212529;
+	background-color: #F4F4F4;
+	width: 400px;
+	margin-bottom: 10px;
+  }
+  .edit-profile-btn{
+	  float: right;
+	  margin-right: 200px;
+	  margin-top: 50px;
+  }
+  .edit-profile-btn button{
+	  border: none;
+	  background-color: #C80000;
+	 padding: 5px 20px;
+	 margin-right: 10px;
+  }
+  .edit-profile-btn button a{
+	  text-decoration: none;
+	  color: #fff;
+	  font-size: 15px;
+	  font-weight: 600;
+  }
+
+
+
+  
+  .edit-settings{
+	margin-bottom: 100px;
+  }
+  .change-email{}
+  .change-email label{
+	display: block;
+	font-size: 18px;
+  font-weight: 600;
+  padding: 5px 0px;
+  }
+  .change-email input{
+	border: none;
+	border-bottom: 2px solid #212529;
+	background-color: #F4F4F4;
+	width: 400px;
+	margin-bottom: 10px;
+  }
+  .change-email button{
+	border: none;
+	background-color: #C80000;
+   padding: 5px 20px;
+   margin-right: 10px;
+   margin-bottom: 50px;
+  }
+  .change-email button a{
+	text-decoration: none;
+	color: #fff;
+	font-size: 15px;
+	font-weight: 600;
+  }
+  .change-pass{}
+  .change-pass label{
+	  display: block;
+	  font-size: 18px;
+	font-weight: 600;
+	padding: 5px 0px;
+  }
+  .change-pass input{
+	border: none;
+	border-bottom: 2px solid #212529;
+	background-color: #F4F4F4;
+	width: 400px;
+	margin-bottom: 10px;
+  }
+  .change-pass button{
+	border: none;
+	background-color: #C80000;
+   padding: 5px 20px;
+   margin-right: 10px;
+  }
+  .change-pass button a{
+	text-decoration: none;
+	color: #fff;
+	font-size: 15px;
+	font-weight: 600;
+  }
+  #icon , #icon2{
+	
+	margin-left: -30px;
+
+	position: relative;
+	z-index: 2;
+  }
